ctm-sf-homeloan-app/main/default/objects/HLA_TaskListAutomation__mdt/HLA_TaskListAutomation__mdt.object-meta.xml
<CustomObject>
    <description
  >List of Tasks to automatically create whenever a Home Loan Application is first created</description>
    <label>HLA_TaskListAutomation</label>
    <pluralLabel>HLA_TaskListAutomation</pluralLabel>
</CustomObject>