ctm-sf-homeloan-app/main/default/objects/HLA_TaskListAutomation__mdt/fields/DueDateOffsetDays__c.field-meta.xml
<CustomField>
  <fullName>DueDateOffsetDays__c</fullName>
  <defaultValue>0</defaultValue>
  <description
  >number days to offset the due date by (i.e. creation date + OFFSET)</description>
  <label>Due Date Offset (Days)</label>
  <precision>6</precision>
  <scale>0</scale>
  <type>Number</type>
</CustomField>