ctm-sf-homeloan-app/main/default/objects/HLA_TaskListAutomation__mdt/fields/Seq_Refi__c.field-meta.xml
<CustomField>
    <fullName>Seq_Refi__c</fullName>
    <label>Seq_Refi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>