ctm-sf-homeloan-app/main/default/objects/HLA_TaskListAutomation__mdt/listViews/All_Data.listView-meta.xml
<ListView>
    <fullName>All_Data</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>DueDateOffsetDays__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>Subject__c</columns>
    <columns>Seq_Newplanning__c</columns>
    <columns>Seq_NewResearch__c</columns>
    <columns>Seq_NewSigned__c</columns>
    <columns>Seq_NewThinking__c</columns>
    <columns>Seq_Refi__c</columns>
    <filterScope>Everything</filterScope>
    <label>All - Data</label>
</ListView>